@@ -38,6 +38,9 @@
 <p>2016-05-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/render.c (DrawImage): Fix problem while reading file
+&quot;pxypjhfdxf.svg.7406476585885697806&quot; provided via via private
+email from Gustavo Grieco on May 24, 2016.</li>
 <li>coders/svg.c: Fix problem while reading file
 &quot;pxypjhfdxf.svg.308008972284643989&quot; provided via private email
 from Gustavo Grieco on May 24, 2016.</li>
